--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "framer-motion": "^10.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "sass": "^1.57.1",
