--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
-    "framer-motion": "^10.0.0",
+    "lazyframe": "^2.2.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-blurhash": "^0.3.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
